<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".FilteringAndCleaning">


        <Spinner
            android:id="@+id/SelectDataOne"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/criteriaOneSpinner"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="80dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/criteriaOneTextColOne"
            android:layout_width="110dp"
            android:layout_height="38dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="80dp"
            android:inputType=""
            app:layout_constraintStart_toEndOf="@+id/criteriaOneSpinner"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/criteriaTwoSpinner"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintStart_toEndOf="@+id/criteriaOneTextColOne"
            app:layout_constraintTop_toTopOf="@+id/criteriaTwoTextColOne" />

        <EditText
            android:id="@+id/criteriaTwoTextColOne"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/criteriaTwoSpinner"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/DeleteOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/delete_missing_data"
            android:onClick="deleteMissingConstraintsColumnOne"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/criteriaTwoSpinner" />

        <Spinner
            android:id="@+id/SelectDataTwo"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="34dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DeleteOne" />

        <Spinner
            android:id="@+id/criteriaOneSpinnerTwo"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="34dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SelectDataTwo" />

        <EditText
            android:id="@+id/criteriaOneTextColTwo"
            android:layout_width="110dp"
            android:layout_height="38dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="34dp"
            android:autofillHints=""
            app:layout_constraintStart_toEndOf="@+id/criteriaOneSpinnerTwo"
            app:layout_constraintTop_toBottomOf="@+id/SelectDataTwo" />

        <Spinner
            android:id="@+id/criteriaTwoSpinnerTwo"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintStart_toEndOf="@+id/criteriaOneTextColTwo"
            app:layout_constraintTop_toTopOf="@+id/criteriaOneTextColTwo" />

        <EditText
            android:id="@+id/criteriaTwoTextColTwo"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/criteriaTwoSpinnerTwo"
            app:layout_constraintTop_toTopOf="@+id/criteriaTwoSpinnerTwo" />

        <Button
            android:id="@+id/DeleteTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/delete_missing_data"
            android:onClick="deleteMissingConstraintsColumnTwo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/criteriaTwoSpinnerTwo" />


        <com.jjoe64.graphview.GraphView
            android:id="@+id/graph"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="34dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filterLabel" />

        <com.jjoe64.graphview.GraphView
            android:id="@+id/graphAfter"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="34dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/graph" />

        <TextView
            android:id="@+id/filterLabel"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="34dp"
            android:text="@string/filter_value"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DeleteTwo" />

        <Button
            android:id="@+id/PlotButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="28dp"
            android:backgroundTint="@android:color/holo_orange_light"
            android:onClick="doFilteringAndPlotting"
            android:text="@string/plot_button"
            app:layout_constraintStart_toEndOf="@+id/filterLabel"
            app:layout_constraintTop_toBottomOf="@+id/DeleteTwo" />

        <Button
            android:id="@+id/regression"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="19dp"
            android:layout_marginRight="19dp"
            android:backgroundTint="@android:color/holo_orange_light"
            android:onClick="LaunchFifthActivity"
            android:text="@string/regression"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/PlotButton"
            app:layout_constraintTop_toBottomOf="@+id/DeleteTwo" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>